# torch-sla

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  benchmarks.html  examples.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  search.html  searchindex.js  setup.html  setup.py  sitemap.xml  torch_sla.html
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
_modules/: index.html
_modules/torch_sla/: distributed.html  linear_solve.html  sparse_tensor.html
_sources/: index.rst.txt  installation.rst.txt
benchmarks/: README.md  benchmark_determinant.py  benchmark_distributed.py  benchmark_distributed_4gpu.py  benchmark_distributed_perf.py  benchmark_large_scale.py  benchmark_mm.py  benchmark_overlap.py  benchmark_solvers.py  benchmark_suitesparse.py
benchmarks/dev/: benchmark_advanced_opts.py  benchmark_batched_cg.py  benchmark_gradient_memory.py  benchmark_mixed_precision_precond.py  benchmark_preconditioners.py  profile_memory_bound.py
csrc/cudss/: cudss_spsolve.cu
csrc/cusolver/: cusolver_spsolve.cu
csrc/spsolve/: spsolve.cpp
docs/: gen_apidoc.sh
docs/source/: benchmarks.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  torch_sla.rst
docs/source/_static/: custom.css  robots.txt
docs/source/_templates/: layout.html
docs/source/_templates/sidebar/: search.html
docs/source/zh/: api.rst  benchmarks.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  torch_sla.rst
docs/source/zh/_templates/: layout.html
docs/source/zh/_templates/sidebar/: search.html
examples/: basic_usage.ipynb  basic_usage.py  batched_solve.ipynb  batched_solve.py  convert_to_notebooks.py  determinant.py  dsparse.ipynb  dsparse.py  gcn_batched.py  gcn_example.ipynb  gcn_example.py  matrix_multiplication.ipynb  matrix_multiplication.py  nonlinear_solve.ipynb  nonlinear_solve.py  persistence.ipynb  persistence.py  spsolve.ipynb  spsolve.py  suitesparse_demo.ipynb  visualization.ipynb
examples/distributed/: README.md  distributed_eigsh.py  distributed_matvec.py  distributed_solve.py  gcn_batched_distributed.py  gcn_distributed.py  launch.sh
tests/: test_batch_solve.py  test_distributed.py  test_distributed_matvec.py  test_distributed_multiprocess.py  test_distributed_solve.py  test_dtensor_integration.py  test_io.py  test_io_distributed.py  test_matvec_multiprocess.py  test_real_distributed.py  test_sort.py  test_sparse_tensor.py  test_sparse_tensor_list.py  test_spmv.py  test_spsolve.py
torch_sla/: __init__.py  batch_solve.py  check.py  compare.py  convert.py  distributed.py  io.py  linear_solve.py  nonlinear_solve.py  random.py  sort.py  sparse_tensor.py  spmm.py  spmv.py  utils.py
torch_sla/backends/: __init__.py  cupy_backend.py  nvmath_backend.py  pytorch_backend.py  scipy_backend.py
torch_sla/triton/: spmv.py  spspmm.py
