[build-system]
requires = ["setuptools>=61.0", "wheel", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-sla"
version = "0.1.4"
description = "PyTorch Sparse Linear Algebra - Differentiable sparse solvers with CUDA support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mingyuan Chi", email = "walkerchi@example.com"},
    {name = "Shizheng Wen", email = "shizheng.wen@sam.math.ethz.ch"}
]
maintainers = [
    {name = "Mingyuan Chi", email = "walkerchi@example.com"},
    {name = "Shizheng Wen", email = "shizheng.wen@sam.math.ethz.ch"}
]
keywords = [
    "pytorch",
    "sparse",
    "linear-algebra",
    "cuda",
    "cupy",
    "cudss",
    "sparse-matrix",
    "linear-solver",
    "differentiable",
    "autograd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10.0",
    "ninja",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]
dev = [
    "pytest>=6.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "black",
    "isort",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx>=4.0",
    "furo",
    "sphinx-autodoc-typehints",
]
# CuPy backend (CUDA 12+)
cupy = [
    "cupy-cuda12x>=13.0",
]
# CUDA backends (requires CUDA 12+)
cuda = [
    "nvidia-cudss-cu12>=0.7.0",
    "cupy-cuda12x>=13.0",
]
# Full installation with all optional dependencies
all = [
    "pytest>=6.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "nvidia-cudss-cu12>=0.7.0",
    "cupy-cuda12x>=13.0",
]

[project.urls]
Homepage = "https://pypi.org/project/torch-sla/"
Documentation = "https://github.com/walkerchi/torch-sla#readme"
Repository = "https://github.com/walkerchi/torch-sla"
PyPI = "https://pypi.org/project/torch-sla/"
Issues = "https://github.com/walkerchi/torch-sla/issues"

[tool.setuptools]
packages = ["torch_sla", "torch_sla.backends"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.cpp", "*.cu", "*.h", "*.cuh"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

